appId: app.simplefasting
name: Review statistics and history
---
- launchApp:
    clearState: true
- tapOn: I agree to the Terms of Use and Privacy Policy
- tapOn: Agree and Continue
- tapOn: Not Now
- tapOn: Start fast
- tapOn: End fast
- tapOn: Data
- assertVisible: Stats
- assertVisible: Total hours
- tapOn: History
- assertVisible: 1 completed fast
- assertVisible: Started
- assertVisible: Ended
