appId: app.simplefasting
name: Open report bug dialog
---
- launchApp:
    clearState: true
- tapOn: I agree to the Terms of Use and Privacy Policy
- tapOn: Agree and Continue
- tapOn: Not Now
- tapOn: Settings
- scrollUntilVisible:
    element: Report bug
    direction: DOWN
- tapOn: Report bug
- assertVisible: Report a bug
- assertVisible: Share diagnostics
- tapOn: Cancel

