appId: app.simplefasting
name: Change settings preferences
---
- launchApp:
    clearState: true
- tapOn: I agree to the Terms of Use and Privacy Policy
- tapOn: Agree and Continue
- tapOn: Not Now
- tapOn: Settings
- assertVisible: Goals
- tapOn: Days + hours
- tapOn: Fast
- tapOn: Start fast
- assertVisible:
    text: "^[0-9]+s$"
- tapOn: Cancel fast
- assertVisible: Cancel fast?
- tapOn: Cancel Fast
- tapOn: Settings
- assertVisible: Timer view
- tapOn: Remaining
- scrollUntilVisible:
    element: Theme & Accent Color
    direction: DOWN
- tapOn: Dark theme
- tapOn: Light theme
- tapOn: Accent color
- scrollUntilVisible:
    element: Notifications
    direction: UP
- assertVisible: Enable Notifications
